fix gap

--- a/style-sheets/form.css
+++ b/style-sheets/form.css
@@ -113,10 +113,11 @@ input{
 
 
 .custom-file-input{
-  
+  display: flex;
   font-weight: 700;
   font-size: 10pt;
   align-content:center;
+  justify-content: end;
   padding: 5px;
   width: 460px;
   height:44px;
